Bug 1794850 - Remove nsXULPopupListener::FireFocusOnTargetContent. r=smaug

Doesn't match HTML behavior, and our UI is inconsistent on whether some
elements triggering context menus are focusable or not.

Remove one semi-random source of :active state changes.

Differential Revision: https://phabricator.services.mozilla.com/D159289